feat(auth): add set token rpc
