# auth/internal/server/grpc/token.go
@@ -13,3 +13,7 @@ func (s *AuthServer) Token(ctx context.Context, req *api.TokenReq) (res *api.Tok
 
 	return &api.TokenReply{Mid: mid}, nil
 }
+
+func (s *AuthServer) SetToken(ctx context.Context, req *api.SetTokenReq) (res *api.SetTokenReply, err error) {
+	return
+}
